--- a/build.xml
+++ b/build.xml
@@ -112,7 +112,8 @@ limitations under the License.
         <!-- Generate API documentation -->
         <javadoc packagenames="org.apache.pivot.*" destdir="${folder.deploy}/${version}/docs/api"
             author="true" version="true" use="true"
-            classpath="${java.class.path}">
+            classpath="${java.class.path}"
+		>
             <classpath>
                 <fileset dir="${folder.trunk}/web-server/lib" includes="**/*.jar"/>
                 <fileset dir="${folder.trunk}/wtk/lib" includes="**/*.jar"/>
@@ -130,18 +131,7 @@ limitations under the License.
             <link href="http://download.oracle.com/javaee/1.4/api/"/>
 
             <header>
-                <![CDATA[
-                <script type="text/javascript">
-                var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-                document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-                </script>
-                <script type="text/javascript">
-                try {
-                var pageTracker = _gat._getTracker("UA-7977275-3");
-                pageTracker._trackPageview();
-                } catch(err) {}</script>
-                ]]>
-            </header>
+			</header>
         </javadoc>
     </target>
 
